BLZT-43: small refactoring move test packages and add scan com.bobocode.bring.